welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:8: error: not found: type int
def truc(a:int):Boolean=
           ^